Upgrade openjdk base image, fix cacerts path, minor POM updates